<resources>
    <string name="app_name">First_lesson</string>
    <string name="newProject">Новый проэкт</string>
    <string name="redButton">Второе задание</string>
    <string name="oneSwitch">переключение</string>
    <string name="vote">Подписаться</string>
    <string name="stars">***</string>
    <string name="title_activity_main_two">MainActivity_two</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="mobile">Мобильный телефон</string>
    <string name="homeNumber">Домашний телефон</string>
    <string name="password">Пароль</string>
    <string name="emailAddress">Почта</string>
</resources>